@@ -1,6 +1,13 @@
 FlightPath 4.x Changelog
 ========================
 
+2015-11-02
+  Removed errant fpm() statement left in accidentally in _Student.php
+
+  Added ability to assign courses to more than one degree (not group, yet).
+  
+  Added extra CSS to highlight when a course is assigned to more than one degree.  
+
 2015-11-01
   Fixed bug where groups were not fully populating during group_clone.
   
@@ -9,6 +16,7 @@ FlightPath 4.x Changelog
   
   Continued working on combining degree logic.
 
+  
 2015-10-31
   Added settings to School Data form in system.module, so we can set up "classifications" of majors.  Edited the admin.degrees.inc file to use these new options,
   added function to misc.inc to get all the options as an array for ease of use.
